--- a/pom.xml
+++ b/pom.xml
@@ -156,7 +156,14 @@
             <groupId>log4j</groupId>
             <artifactId>log4j</artifactId>
             <version>1.2.16</version>
-        </dependency> 		
+        </dependency> 	
+        
+        <!-- 基础包 -->
+        <dependency>
+            <groupId>commons-lang</groupId>
+            <artifactId>commons-lang</artifactId>
+            <version>2.6</version>
+        </dependency> 	
         
 	</dependencies>
 </project>
