配置jdbc持久层方式

--- a/pom.xml
+++ b/pom.xml
@@ -158,12 +158,21 @@
             <version>1.2.16</version>
         </dependency> 	
         
+        <!-- 20170207 -->
         <!-- 基础包 -->
         <dependency>
             <groupId>commons-lang</groupId>
             <artifactId>commons-lang</artifactId>
             <version>2.6</version>
         </dependency> 	
+        
+        <!-- 20170208 -->
+        <!-- c3p0数据源包 -->
+        <dependency>
+            <groupId>c3p0</groupId>
+            <artifactId>c3p0</artifactId>
+            <version>0.9.1.2</version>
+        </dependency>
         
 	</dependencies>
 </project>
