--- a/pom.xml
+++ b/pom.xml
@@ -224,6 +224,56 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		
+		<!-- 20170214 -->
+		<!-- Json -->
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-core-asl</artifactId>
+			<version>1.8.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.codehaus.jackson</groupId>
+			<artifactId>jackson-mapper-asl</artifactId>
+			<version>1.8.4</version>
+		</dependency>
+		<dependency>
+			<groupId>net.sf.flexjson</groupId>
+			<artifactId>flexjson</artifactId>
+			<version>2.1</version>
+		</dependency>
+		<!-- Swagger测试依赖包 -->
+	    <dependency>
+	        <groupId>com.mangofactory</groupId>
+	        <artifactId>swagger-springmvc</artifactId>
+	        <version>1.0.2</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>com.mangofactory</groupId>
+	        <artifactId>swagger-models</artifactId>
+	        <version>1.0.2</version>
+	    </dependency>
+	    <dependency>
+	        <groupId>com.wordnik</groupId>
+	        <artifactId>swagger-annotations</artifactId>
+	        <version>1.3.11</version>
+	    </dependency>
+	    
+	    
         
 	</dependencies>
+	
+	<repositories>
+
+    <repository>
+
+      <id>jcenter-release</id>
+
+      <name>jcenter</name>
+
+      <url>http://oss.jfrog.org/artifactory/oss-release-local/</url>
+
+    </repository>
+
+</repositories>
 </project>
