--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -54,6 +54,16 @@
         <filter-name>SpringEncodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
     </filter-mapping>
+    
+    <filter>
+    	<filter-name>myFilter</filter-name>
+    	<filter-class>com.sportstory.config.MyFilter</filter-class>
+    </filter>
+    <filter-mapping>
+    	<filter-name>myFilter</filter-name>
+    	<url-pattern>*.do</url-pattern>
+    </filter-mapping>
+    
  
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
