实现注册接口

--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     
   <properties>
 		<!-- spring版本号 -->
-		<spring.version>3.2.8.RELEASE</spring.version>
+		<spring.version>4.0.1.RELEASE</spring.version>
 		<!-- junit版本号 -->
 		<junit.version>4.10</junit.version>
   </properties>
@@ -174,6 +174,11 @@
 			<version>3.6.1.Final</version>
 		</dependency>
 		<dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-ehcache</artifactId>
+            <version>3.6.1.Final</version>
+        </dependency>
+		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-entitymanager</artifactId>
 			<version>3.6.1.Final</version>
@@ -188,6 +193,7 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+        
 		<dependency>
 			<groupId>org.hibernate.javax.persistence</groupId>
 			<artifactId>hibernate-jpa-2.0-api</artifactId>
